# analytic_continuation

./: README.md  pyproject.toml
docs/: 和Gemini的对话.md  实验方案.md  进度报告.md
experiments/: exp_baseline.py  exp_chebyshev_stability.py  exp_convergence.py  exp_energy_comparison.py  exp_extension.py  exp_gamma_validation.py  exp_regularized_iter.py
results/exp_baseline/20260408_232938/: config.json  metrics.csv  summary.txt
results/exp_baseline/20260408_234530/: config.json  metrics.csv
results/exp_baseline/20260409_012710/: metrics.csv  summary.txt
results/exp_baseline/20260409_103416/: metrics.csv
results/exp_chebyshev_stability/20260409_084344/: config.json  metrics.csv  summary.txt
results/exp_convergence/20260409_083802/: metrics.csv  summary.txt
results/exp_convergence/20260409_083939/: config.json  metrics.csv  summary.txt
results/exp_convergence/20260409_111618/: config.json  metrics.csv
results/exp_convergence/20260421_144118/: config.json  metrics.csv
results/exp_convergence/20260421_144131/: metrics.csv  summary.txt
results/exp_convergence/20260421_144222/: config.json  metrics.csv  summary.txt
results/exp_energy_comparison/20260421_151048/: config.json  energy_summary.csv  summary.txt  values.csv
results/exp_energy_comparison/20260421_151131/: energy_summary.csv  summary.txt  type_a_cubic_energy_scan.csv
src/analytic_continuation/: __init__.py
src/analytic_continuation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_convergence.py  test_gamma.py  test_methods.py  test_sequences.py
(+32 files in other folders)
